# jianyong-cnc-ai

./: .env.example  .gitignore  .ignore  CLAUDE.md  CODE_MAP.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/hooks/: record-experience.sh  session-start.sh  session-stop.sh
.claude/skills/: api-development.md  cnc-gcode-rules.md  deployment.md  frontend-component.md  security-review.md
backend/: CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  drawings.py  gcode.py  inspection.py  records.py  tools.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  job_record.py  machine.py  material.py  tool.py  user.py
backend/app/schemas/: __init__.py  chat.py  job_record.py  machine.py  material.py  tool.py  user.py
backend/app/services/: ai_provider.py  drawing_parser.py  gcode_engine.py  post_processor.py  rag_service.py
backend/tests/: test_chat.py  test_gcode_engine.py  test_models.py  test_rag_service.py
docs/: PRD.md  api-design.md  architecture.md  progress.md
frontend/: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/chat/: Chat.test.tsx  ChatTab.tsx
frontend/src/components/gcode/: GCodeTab.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/profile/: ProfileTab.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: appStore.ts
frontend/src/styles/: theme.ts
